--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,4 +31,4 @@ jobs:
     - name: Lint with pylint
       run: |
         # stop the build if there are Python lint errors
-        pylint --rcfile=.pylintrc -f colorized **/*.py
+        pylint --rcfile=.pylintrc -f colorized image_captioning/**/*.py
