--- a/.pylintrc
+++ b/.pylintrc
@@ -12,7 +12,7 @@ profile=no
 
 # Add files or directories to the denylist. They should be base names, not
 # paths.
-ignore=CVS,venv,experimental
+ignore=
 
 # Pickle collected data for later comparisons.
 persistent=yes
