Modify settings for formatter from black -> yapf.
- Much better settings.
- Can modify files in-place.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,2 @@
-[tool.black]
-target-version = ['py36', 'py37', 'py38']
-exclude = '''
-/(
-    \.eggs  # exclude a few common dirs in the root of the project
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
+[tool.yapf]
+based_on_style = "google"
