[#18] Add training notebook

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@ tags
 ### Datasets
 ted_hrlr_translate_pt_en_converter/
 ted_hrlr_translate_pt_en_converter.zip
+
+### iPython Notebook Checkpoints
+.ipynb_checkpoints/
